fixed images being cut off when they are bigger that the width of the container.

--- a/scripts/less/style.less
+++ b/scripts/less/style.less
@@ -85,6 +85,10 @@ nav {
 	}
 }
 
+img {
+	max-width: 100%;
+}
+
 #main {
 	background-color: #f2f2f2;
 	margin: 0 auto;
